The overflow issue seems to be that the quote text size was too large. Now size is relative to the size of the screen.

--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -72,7 +72,7 @@ blockquote {
 blockquote p {
     color: black;
     background-color: rgba(255, 255, 255, 0.55);
-    font-size: 4rem;
+    font-size: calc(0.5rem + 4.5vw);
     display: inline;
     line-height: 1;
 }
