--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -7,7 +7,7 @@
     /* overflow: hidden; */
     top: 0;
     position: fixed;
-    width: calc(100vw - 20px);
+    width: 100%;
     /* width: auto; */
     /* max-width: 100%; */
     /* padding-left: auto; */
